# entropic

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: codeowners
.github/workflows/: checks.yaml
docs/: Examples.md  Makefile  Reference.md  api.md  conf.py  index.rst  quickstart.md
docs/Reference/: index.rst  sources.rst
docs/Tutorial/: organize.md
entropic/db/: __init__.py  base.py  tiny_db.py
entropic/process/: pipeline.py
entropic/results/: results.py
entropic/results_api/: api.py
entropic/sources/: __init__.py  case.py  iteration.py  mixins.py  sample.py
entropic/sources/fields/: __init__.py  base.py  data_source.py  mixins.py  samples.py  string.py
examples/: csv_example.py  lotka_volterra.py  makefile  minimal.py  upgraded.py  upgraded_v1.py  upgraded_v2.py
src/entropic/: __init__.py  hashing.py  index.py  logging.py  record.py  store.py
src/process/: pipeline.py
src/results/: results.py
src/sources/: experiment.py
tests/: test_e2e.py  test_hashing.py  test_logging.py  test_record.py  test_store.py
tests/e2e/: minimal.py  test_minimal.py
tests/integration/: test_essential.py  test_upgraded.py
tests/unit/db/: test_tiny_db.py
tests/unit/process/: test_pipeline.py
tests/unit/results/: test_results.py
tests/unit/sources/: test_sample.py
tests/unit/sources/fields/: test_data_source.py
