[project]
name = "entropic"
version = "2.1.0"
description = "Minimal, file-based run cache for Python-driven simulations and scripts."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Juan Pablo Vanegas", email = "jpvanegasc@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "tinydb>=4.8.2",
]

[project.urls]
"Homepage" = "https://github.com/jpvanegasc/entropic"
"Bug Tracker" = "https://github.com/jpvanegasc/entropic/issues"
"Documentation" = "https://entropic.readthedocs.io/en/latest/index.html"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "numpy>=2.2.6",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
]

[tool.mypy]
mypy_path = "src"
strict = true
